// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard debe mostrar el componente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola ProductCard
  </h1>
</div>
`;
